<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/total_cases_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_cases_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/total_cases_head"
        app:layout_constraintTop_toTopOf="@+id/total_cases_head" />

    <TextView
        android:id="@+id/new_cases_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/new_cases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/active_cases_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_cases"
        app:layout_constraintStart_toStartOf="@+id/new_cases_label"
        app:layout_constraintTop_toBottomOf="@+id/new_cases_label" />

    <TextView
        android:id="@+id/critycal_cases_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/critycal_cases"
        app:layout_constraintStart_toStartOf="@+id/active_cases_label"
        app:layout_constraintTop_toBottomOf="@+id/active_cases_label" />

    <TextView
        android:id="@+id/recovered_cases_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovered_cases"
        app:layout_constraintStart_toStartOf="@+id/critycal_cases_label"
        app:layout_constraintTop_toBottomOf="@+id/critycal_cases_label" />

    <TextView
        android:id="@+id/oneMpop_cases_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneMPop_cases"
        app:layout_constraintStart_toStartOf="@+id/recovered_cases_label"
        app:layout_constraintTop_toBottomOf="@+id/recovered_cases_label" />

    <TextView
        android:id="@+id/new_cases_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/new_cases_label"
        app:layout_constraintTop_toTopOf="@+id/new_cases_label" />

    <TextView
        android:id="@+id/active_cases_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/active_cases_label"
        app:layout_constraintTop_toBottomOf="@+id/new_cases_amount" />

    <TextView
        android:id="@+id/critical_cases_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/critycal_cases_label"
        app:layout_constraintTop_toBottomOf="@+id/active_cases_amount" />

    <TextView
        android:id="@+id/recovered_cases_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/recovered_cases_label"
        app:layout_constraintTop_toBottomOf="@+id/critical_cases_amount" />

    <TextView
        android:id="@+id/oneMpop_cases_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/oneMpop_cases_label"
        app:layout_constraintTop_toBottomOf="@+id/recovered_cases_amount" />
</androidx.constraintlayout.widget.ConstraintLayout>