<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/total_deaths_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deaths"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_death_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="136dp"
        android:text="@string/new_deaths"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oneMpop_ldeath_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneMpop_deaths"
        app:layout_constraintStart_toStartOf="@+id/new_death_label"
        app:layout_constraintTop_toBottomOf="@+id/new_death_label" />

    <TextView
        android:id="@+id/new_deaths_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/oneMpop_deaths_amount"
        app:layout_constraintTop_toTopOf="@+id/new_death_label" />

    <TextView
        android:id="@+id/oneMpop_deaths_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/oneMpop_ldeath_label"
        app:layout_constraintTop_toBottomOf="@+id/new_death_label" />

    <TextView
        android:id="@+id/total_deaths_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/total_deaths_head"
        app:layout_constraintTop_toTopOf="@+id/total_deaths_head" />

</androidx.constraintlayout.widget.ConstraintLayout>